kubernetes/projects/apps/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
      - name: jellyfin
        image: jellyfin/jellyfin:10.10.7
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 2000m
            memory: 4Gi
          limits:
            cpu: 8000m
            memory: 16Gi
        ports:
        - containerPort: 8096
        volumeMounts:
        - name: cache
          mountPath: /cache
        - name: config
          mountPath: /config
        - name: media
          mountPath: /media
      volumes:
      - name: cache
        persistentVolumeClaim:
          claimName: jellyfin-cache
      - name: config
        persistentVolumeClaim:
          claimName: jellyfin-config
      - name: media
        persistentVolumeClaim:
          claimName: jellyfin-media
